--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
+!fig/*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
