--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 # *.ps
 # *.eps
 *.pdf
-!fig/*.pdf
+!Figures/*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
